added UI components

--- a/create-react-express/client/src/App.css
+++ b/create-react-express/client/src/App.css
@@ -22,3 +22,12 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+.navbar-item, .navbar-brand{
+  padding-left: 25px;
+  margin-left: 25px;
+
+}
+.header{
+  border-style: solid;
+  margin: 3% 15% 3% 15%;
+}
