--- a/create-react-express/client/src/App.css
+++ b/create-react-express/client/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  color: white;
 }
 
 .App-logo {
@@ -29,7 +30,6 @@
 }
 .header, .search-results, .search-input, .card, .saved-results{
   border-style: solid;
-  margin: 3% 5% 3% 5%;
 }
 .text{
   width: 100%;
@@ -42,3 +42,40 @@
   float:left;
   padding: 0 15px 10px 10px;
 }
+
+.card-front, .card-back {
+  position: absolute;
+  backface-visibility: hidden;
+  transition: 0.6s;
+}
+
+.card-back {
+  transform: rotateY(180deg);
+}
+
+.card-image{
+  padding: 230px, 0px, 0px, 10px;
+  width: 100%;
+  position: absolute;
+  bottom: 0px;
+  cursor: grab;
+}
+.card-front {
+  height: 80vh;
+  width: 14vw;
+}
+
+.card-description {
+  padding: 10px;
+  height: 78vh;
+  width: 14vw;
+  overflow: hidden;
+  background-image: url('page1.png');
+  cursor: grab;
+
+}
+.card-body {
+  cursor: grab;
+}
+
+
